--- a/patron_de_boite_pour_papa/index.html
+++ b/patron_de_boite_pour_papa/index.html
@@ -51,16 +51,16 @@
 </head>
 
 <body onload="drawC();">
-    <canvas id="canvas" width="600" height="400"></canvas>
+    <canvas id="canvas" width="1122" height="793"></canvas>
     <h1>Patron de boite pour les jeux de papa</h1>
     <h6>Reset</h6>
-    <button onclick="reset();" style="width: 50px;height: 20px;">Ø</button>
+    <button onclick="drawC();" style="width: 50px;height: 20px;">Ø</button>
     <h6></h6>
-    <input id="largeur" type="range" min="1" max="50" value="2" onchange="changeLargeur();" >
+    <input id="largeur" type="range" min="20" max="50" value="30" onchange="changeLargeur();" >
     <h6></h6>
-    <input id="hauteur" type="range" min="1" max="50" value="2" onchange="changeHauteur();">
+    <input id="hauteur" type="range" min="20" max="50" value="30" onchange="changeHauteur();">
     <h6></h6>
-    <input id="profondeur" type="range" min="1" max="50" value="2" onchange="changeProfondeur();">
+    <input id="profondeur" type="range" min="20" max="50" value="30" onchange="changeProfondeur();">
     <h6>Download</h6>
     <a className="download-link" href="" download="monImage.png">⇓ here ⇓</a>
 </body>
@@ -68,6 +68,9 @@
 <script>
     var canevas = document.getElementById('canvas');
     var ctx = canevas.getContext('2d');
+    console.log(convertCmToPx(21));
+    console.log(convertCmToPx(29.7));
+    console.log(convertCmToPx(1));
 
     /* pour télécharger le dessin */
     document.getElementsByTagName('a')[0].addEventListener("click", function (evt) {
@@ -80,7 +83,7 @@
     var texte = document.getElementsByTagName('h6')[1];
     var largeur = document.getElementById('largeur');
     ctx.lineWidth = largeur.value;
-    texte.innerHTML = "Largeur (" + largeur.value + ")";
+    texte.innerHTML = "Largeur : " + largeur.value + " mm (" + largeur.value/10 + "cm)";
         drawP();
     }
 
@@ -89,7 +92,7 @@
     var texte = document.getElementsByTagName('h6')[2];
     var hauteur = document.getElementById('hauteur');
     ctx.lineWidth = hauteur.value;
-    texte.innerHTML = "Hauteur (" + hauteur.value + ")";
+    texte.innerHTML = "Hauteur : " + hauteur.value + " mm (" + hauteur.value/10 + "cm)";
         drawP();
     }
 
@@ -98,19 +101,19 @@
     var texte = document.getElementsByTagName('h6')[3];
     var profondeur = document.getElementById('profondeur');
     ctx.lineWidth = profondeur.value;
-    texte.innerHTML = "Profondeur (" + profondeur.value + ")";
+    texte.innerHTML = "Profondeur : " + profondeur.value + " mm (" + profondeur.value/10 + "cm)";
         drawP();
     }
 
-    /* remet tout à zéro */
-    function reset() {
-        document.getElementsByTagName('h6')[1].innerHTML = "Size (" + 2 + ")";
-        ctx.clearRect(1, 1, canvas.width - 2, canvas.height - 2);
-        ctx.strokeRect(1, 1, canvas.width - 2, canvas.height - 2);
+    /* convertit les cm en pixels */
+    function convertCmToPx(mm) {
+        return (96 / 2.54) * mm;        // https://www.pixelto.net/cm-to-px-converter
     }
 
-    /* convertit les cm en pixels */
-    function convertPxToCm() {}
+    /* convertit les pixels en cm */
+    function convertPxToCm(px) {
+        return (2.54 / 96) * px;    // https://www.pixelto.net/px-to-cm-converter
+    }
 
     /* dessine le patron */
     function drawP() {
@@ -119,11 +122,11 @@
         var profondeur = document.getElementById('profondeur');
         ctx.lineWidth = 2;
         ctx.beginPath();
-        ctx.moveTo(10, 10);
-        ctx.lineTo(10, largeur.value*5);
-        ctx.moveTo(10, 10);
-        ctx.lineTo(hauteur.value*5, 10);
-        ctx.moveTo(10, 10);
+        ctx.moveTo(convertCmToPx(10), convertCmToPx(10));
+        ctx.lineTo(convertCmToPx(10), largeur.value*5);
+        ctx.moveTo(convertCmToPx(10), convertCmToPx(10));
+        ctx.lineTo(hauteur.value*5, convertCmToPx(10));
+        ctx.moveTo(convertCmToPx(10), convertCmToPx(10));
         let pythagore = Math.round(Math.sqrt(Math.pow(profondeur.value,2)/2));
         ctx.lineTo(pythagore*5, pythagore*5); // pythagore
         ctx.stroke();
@@ -148,21 +151,30 @@
         var hauteur = document.getElementById('hauteur');
         var texteP = document.getElementsByTagName('h6')[3];
         var profondeur = document.getElementById('profondeur');
+        largeur.value = 30;
+        hauteur.value = 30;
+        profondeur.value = 30;
         ctx.lineWidth = 2;
         ctx.lineCap = 'round';
         ctx.lineJoin = 'round';
         //console.log(bgColor.value);
         ctx.fillStyle = "#ffffff";
-        ctx.fill();
-        texteL.innerHTML = "Largeur (" + largeur.value + ")";
-        texteH.innerHTML = "Hauteur (" + hauteur.value + ")";
-        texteP.innerHTML = "Profondeur (" + profondeur.value + ")";
+        ctx.fillRect(1, 1, canvas.width - 2, canvas.height - 2);
+        texteL.innerHTML = "Largeur : " + largeur.value + " mm (" + largeur.value/10 + "cm)";
+        texteH.innerHTML = "Hauteur : " + hauteur.value + " mm (" + largeur.value/10 + "cm)";
+        texteP.innerHTML = "Profondeur : " + profondeur.value + " mm (" + largeur.value/10 + "cm)";
         ctx.strokeStyle = "#000000"
+        ctx.beginPath();
         ctx.moveTo(0, 0);
-        ctx.lineTo(0, 400);
-        ctx.lineTo(600, 400);
-        ctx.lineTo(600, 0);
+        ctx.lineTo(0, 793);
+        ctx.lineTo(1122, 793);
+        ctx.lineTo(1122, 0);
         ctx.lineTo(0, 0);
+        ctx.stroke();
+        //tests 1cm
+        ctx.beginPath();
+        ctx.moveTo(10, 10);
+        ctx.lineTo(10, 37+10);
         ctx.stroke();
     }
 </script>
