--- a/patron_de_boite_pour_papa/index.html
+++ b/patron_de_boite_pour_papa/index.html
@@ -139,6 +139,12 @@
         var l = convertMmToPx(largeur.value);
         var h = convertMmToPx(hauteur.value);
         var p = convertMmToPx(profondeur.value);
+        
+        //tests 1cm
+        ctx.beginPath();
+        ctx.moveTo(10, 10);
+        ctx.lineTo(37+10, 10);
+        ctx.stroke();
 
         /*ctx.beginPath();
         ctx.moveTo(convertCmToPx(5), convertCmToPx(5));
@@ -153,7 +159,7 @@
         ctx.stroke();*/
 
         // les 3 carrés
-        var x = convertCmToPx(3);
+        var x = Math.round(h/3) + convertCmToPx(1);
         var y = h + convertCmToPx(1);
         ctx.beginPath();
         // 1er carré
@@ -175,6 +181,26 @@
         ctx.moveTo(x, y);
         ctx.lineTo(x+p, y);
         ctx.lineTo(x+p, y+l);
+        ctx.lineTo(x, y+l);
+
+        //deux hauteur de face complète
+        ctx.moveTo(x, y);
+        ctx.lineTo(x, y-h);
+        ctx.moveTo(x, y+l);
+        ctx.lineTo(x, y+l+h);
+
+        // face 2/3 - 1/3
+        // plus grande partie : 2/3
+        x=x+p;
+        ctx.moveTo(x, y);
+        ctx.lineTo(x+Math.round(h/3)*2, y);
+        ctx.lineTo(x+Math.round(h/3)*2, y+l);
+        ctx.lineTo(x, y+l);
+        // plus petite partie : 1/3
+        x=x-2*p-h;
+        ctx.moveTo(x, y);
+        ctx.lineTo(x-Math.round(h/3), y);
+        ctx.lineTo(x-Math.round(h/3), y+l);
         ctx.lineTo(x, y+l);
 
         ctx.stroke();
@@ -221,12 +247,8 @@
         ctx.lineTo(1122, 0);
         ctx.lineTo(0, 0);
         ctx.stroke();
-        //tests 1cm
-        ctx.beginPath();
-        ctx.moveTo(10, 10);
-        ctx.lineTo(10, 37+10);
-        ctx.stroke();
 
+        drawP();
         /*
         (0,y) |
         (x,0) -
