--- a/patron_de_boite_pour_papa/index.html
+++ b/patron_de_boite_pour_papa/index.html
@@ -183,10 +183,18 @@
         ctx.lineTo(x+p, y+l);
         ctx.lineTo(x, y+l);
 
-        //deux hauteur de face complète
+        //deux deux face en biais, partie basse (2/3)
+        //celle de droite (en haut)
         ctx.moveTo(x, y);
         ctx.lineTo(x, y-h);
+        ctx.moveTo(x+p, y);
+        ctx.lineTo(x+p, y-Math.round(h/3)*2);
+        ctx.lineTo(x, y-h);
+        //celle de gauche (en bas)
         ctx.moveTo(x, y+l);
+        ctx.lineTo(x, y+l+h);
+        ctx.moveTo(x+p, y+l);
+        ctx.lineTo(x+p, y+l+Math.round(h/3)*2);
         ctx.lineTo(x, y+l+h);
 
         // face 2/3 - 1/3
@@ -202,6 +210,20 @@
         ctx.lineTo(x-Math.round(h/3), y);
         ctx.lineTo(x-Math.round(h/3), y+l);
         ctx.lineTo(x, y+l);
+
+        //deux deux face en biais, partie haute (1/3)
+        //celle de droite (en haut)
+        ctx.moveTo(x, y);
+        ctx.lineTo(x, y-Math.round(h/3));
+        ctx.moveTo(x+p, y);
+        ctx.lineTo(x+p, y);
+        ctx.lineTo(x, y-Math.round(h/3));
+        //celle de gauche (en bas)
+        ctx.moveTo(x, y+l);
+        ctx.lineTo(x, y+l+Math.round(h/3));
+        ctx.moveTo(x+p, y+l);
+        ctx.lineTo(x+p, y+l);
+        ctx.lineTo(x, y+l+Math.round(h/3));
 
         ctx.stroke();
 
