--- a/patron_de_boite_pour_papa/index.html
+++ b/patron_de_boite_pour_papa/index.html
@@ -212,6 +212,8 @@
     /* dessine le patron */
     function drawP() {
 
+        const TO_RADIANS = Math.PI/180; 
+
         var wood_image = new Image();
         wood_image.src = "C:/perso/projets_persos/dot_calendar/projet/patron_de_boite_pour_papa/coffre_tobagoxcf.png";
         //wood_image.src = "https://paulinefr.github.io/patron_de_boite_pour_papa/coffre_tobagoxcf.png";
@@ -311,13 +313,13 @@
         ctx.lineTo(x, y);
         
         if(tobago){
-            //ctx.save();
-            //ctx.translate(x, y);
-            //ctx.rotate(90* Math.PI / 180);
-            //ctx.translate(0,-x);
+            ctx.save();
+            ctx.translate(x, y);
+            ctx.rotate(90 * TO_RADIANS);
+            ctx.translate(0,-p);
             //ctx.drawImage(image,0,0);
-            ctx.drawImage(wood_image,x, y, p, l);
-            //ctx.restore();
+            ctx.drawImage(wood_image,0, 0, l, p);
+            ctx.restore();
         } 
 
         /** ajout d'une gomette si un lien est entrée dans l'input **/
@@ -329,7 +331,13 @@
             let save_x = x;
             let save_y = y;
             gomette_image.onload = function(){
-                ctx.drawImage(gomette_image, save_x+(p/4), save_y+(l/4), (p/2), (l/2));
+                //ctx.drawImage(gomette_image, save_x+(p/4), save_y+(l/4), (p/2), (l/2));
+                ctx.save();
+                ctx.translate(save_x+(p/4), save_y+(l/4));
+                ctx.rotate(90 * TO_RADIANS);
+                ctx.translate(0,-(p/2));
+                ctx.drawImage(gomette_image,0, 0, (l/2), (p/2));
+                ctx.restore();
             }
         }
 
@@ -344,6 +352,12 @@
         
         if(tobago){
  //           ctx.drawImage(wood_image, x, y, h, l);
+            ctx.save();
+            ctx.translate(x, y);
+            ctx.rotate(-90 * TO_RADIANS);
+            ctx.translate(-l,0);
+            ctx.drawImage(wood_image,0, 0, l, h);
+            ctx.restore();
         } 
 
         //3ieme carré
@@ -356,6 +370,12 @@
 
         if(tobago){
  //           ctx.drawImage(wood_image, x, y, p, l);
+            ctx.save();
+            ctx.translate(x, y);
+            ctx.rotate(-90 * TO_RADIANS);
+            ctx.translate(-l,0);
+            ctx.drawImage(wood_image,0, 0, l, p);
+            ctx.restore();
         } 
 
 
@@ -367,7 +387,7 @@
         ctx.lineTo(x+p, y);
 
         if(tobago){
- //           ctx.drawImage(wood_image, x, y-h, p, h);
+            ctx.drawImage(wood_image, x, y-h, p, h);
         } 
 
         //celle de gauche (en bas)
@@ -378,6 +398,12 @@
 
         if(tobago){
  //           ctx.drawImage(wood_image, x, y+l, p, h);
+            ctx.save();
+            ctx.translate(x, y+l);
+            ctx.rotate(180 * TO_RADIANS);
+            ctx.translate(-p,-h);
+            ctx.drawImage(wood_image,0, 0, p, h);
+            ctx.restore();
         } 
 
         // face 2/3 - 1/3
@@ -390,6 +416,12 @@
 
         if(tobago){
  //           ctx.drawImage(wood_image, x, y, h, l);
+            ctx.save();
+            ctx.translate(x, y);
+            ctx.rotate(90 * TO_RADIANS);
+            ctx.translate(0,-h);
+            ctx.drawImage(wood_image,0, 0, l, h);
+            ctx.restore();
         }
 
         // plus petite partie : 1/3
@@ -401,6 +433,12 @@
 
         if(tobago){
  //           ctx.drawImage(wood_image, x-h, y, h, l);
+            ctx.save();
+            ctx.translate(x-h, y);
+            ctx.rotate(90 * TO_RADIANS);
+            ctx.translate(0,-h);
+            ctx.drawImage(wood_image,0, 0, l, h);
+            ctx.restore();
         }
 
         //deux deux face en biais, partie haute (1/3)
@@ -413,6 +451,12 @@
 
         if(tobago){
  //           ctx.drawImage(wood_image, x, y-h, p, h);
+            ctx.save();
+            ctx.translate(x, y-h);
+            ctx.rotate(180 * TO_RADIANS);
+            ctx.translate(-p,-h);
+            ctx.drawImage(wood_image,0, 0, p, h);
+            ctx.restore();
         }
 
         //celle de gauche (en bas)
@@ -423,7 +467,7 @@
         ctx.lineTo(x, y+l+Math.round(h/3));
 
         if(tobago){
- //           ctx.drawImage(wood_image, x, y+l, p, h);
+            ctx.drawImage(wood_image, x, y+l, p, h);
         }
 
         ctx.stroke();
